@@ -9,6 +9,7 @@
 - Change: [#21715] [Plugin] Remove access to the internal `owner` property. Note: `ownership` is still accessible.
 - Change: [#21855] Cheats menu dropdown no longer requires dragging.
 - Change: [#21866] Hide the FPS Counter when the top toolbar/widgets have been toggled off.
+- Change: [#21950] Construction and removal buttons can now be held down for repeated placement.
 - Fix: [#866] Boat Hire boats get stuck entering track (original bug).
 - Fix: [#10701] No reason specified when placing door over unsuitable track.
 - Fix: [#18723, #21870] Attempting to demolish a flat ride in pause mode allows you to place multiple copies.
